; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_fmgr.c_pg_detoast_datum.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/fmgr/extr_fmgr.c_pg_detoast_datum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varlena = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.varlena* @pg_detoast_datum(%struct.varlena* %0) #0 {
  %2 = alloca %struct.varlena*, align 8
  %3 = alloca %struct.varlena*, align 8
  store %struct.varlena* %0, %struct.varlena** %3, align 8
  %4 = load %struct.varlena*, %struct.varlena** %3, align 8
  %5 = call i64 @VARATT_IS_EXTENDED(%struct.varlena* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.varlena*, %struct.varlena** %3, align 8
  %9 = call %struct.varlena* @detoast_attr(%struct.varlena* %8)
  store %struct.varlena* %9, %struct.varlena** %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load %struct.varlena*, %struct.varlena** %3, align 8
  store %struct.varlena* %11, %struct.varlena** %2, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load %struct.varlena*, %struct.varlena** %2, align 8
  ret %struct.varlena* %13
}

declare dso_local i64 @VARATT_IS_EXTENDED(%struct.varlena*) #1

declare dso_local %struct.varlena* @detoast_attr(%struct.varlena*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
